--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
     "ts-node-dev": "^1.0.0-pre.63",
