--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "start": "tsnd --transpile-only --ignore-watch node_modules  src/index.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
@@ -18,6 +19,7 @@
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
