--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -24,6 +25,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
+    "@types/yup": "^0.29.9",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
   }
