--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "yup": "^0.29.3"
   },
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/yup": "^0.29.9",
     "ts-node-dev": "^1.0.0-pre.63",
